syntax = "proto3";

option csharp_namespace = "ServerApp";

package dataClient;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ClientData {

	rpc DataReturn (DataRequest) returns (DataResponse);
    rpc MessageHistoryData (MessHistRequest) returns (HistoryMessRespons);
    rpc AddDBMessData (DBMessRequest) returns (google.protobuf.Empty);
}

//Объекты//
message UserItem{
    string username = 1;
    string email = 2;
    string avatar = 3;
    string createAt = 4;
    string personalChannel = 5;
}
message messageItem{
    string nameChannel = 1;
    UserItem userSender = 2;
    string textMess = 3;
    string sendAt = 4;
}
//Объекты//

//Запросы, ответы//
message DataRequest {
    string token = 1;
}
message MessHistRequest {
    string token = 1;
    string channelName = 2;
}
message DataResponse {
    string username = 1;
    string email = 2;
    string avatar = 3;
    string createAt = 4;
    repeated UserItem friends = 5;
}
message HistoryMessRespons{
    repeated messageItem listMess = 1;
}
message DBMessRequest{
    string channelName = 1;
    string userSender = 2;
    string messangeText = 3;
    google.protobuf.Timestamp sendAt = 4; 
}
message DBMessRespons{

}
//Запросы, ответы//